syntax = "proto3";

package drand;

enum MessageType {
  UNKNOWN = 0;
  INIT = 1;
  COMMIT = 2;
}

message Message {
  MessageType type = 1;
  uint32 sender_id = 3; // TODO: make it public key
  bytes block_hash = 4;
  bytes payload = 5;
  bytes signature = 6;
}
